5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1795_1602.log
== TEST (2019-05-30 16:03:13) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

print(max(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:06:49) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x)):
	if(x[i] == max(x))
		m = m + 1
	else:
		m = m
		
			
print(m)
-- ERROR:
File "XXXX", line 8
    if(x[i] == max(x))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:06:58) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x)):
	if(x[i] == max(x)):
		m = m + 1
	else:
		m = m
		
			
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:55) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x)):
	if(x[i] == max(x)):
		print(x[i])
	i = i + 1	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:09:17) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < max(x)):
	i = i + 1	
print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:09:47) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < max(x)):
	i = i + 1	
print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:01) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x) and i < max(x)) :
	i = i + 1	
print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:23) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x) and i < max(x)) :
	i = i + 0	
print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:17) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(i < size(x) and i < max(x)) :
	i = i + 0	
print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:32) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(i < size(x) or i < max(x)) :
	i = i + 0	
print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:46) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(i < max(x)) :
	m = m + 1
	i = i + 0	

print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:50) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < max(x)) :
	m = m + 1
	i = i + 0	

print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:57) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x)) :
	if(x[i] < max(x)):
		m = m + 1
	else:
		m = m
	i = i + 0	

print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:49) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x)) :
	if(x[i] < max(x)):
		m = m + 1
	else:
		m = m
	i = i + 0	

print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:17) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(i < max(x)) :
	i = i + 1

print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:30) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(i < max(x)) :
	i = i + 1

print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:34) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(i < max(x)) :
	x[i] = x[i]
	i = i + 1
print(x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:56) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(i < max[x]) :
	x[i] = x[i]
	i = i + 1
print(x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:42) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(i == max(x)) :
	i = i + 1
print(x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:44) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(i == max(x)) :
	i = i + 1
print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:22) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x)):
	if(i < max(x)):
		m = m + 1
	i = i + 1
	
	
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:43) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x)):
	if(i < max(x)):
		m = m + 1
	else:
		m = m + 0
	i = i + 1
	
	
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:54) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x)):
	if(i < max(x)):
		m = m + 1
	else:
		m = m + 0
	i = i + 1
	
	
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:58) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0
m = 0
while(i < size(x)):
	if(i < max(x)):
		m = m + 1
	else:
		m = m + 0
	i = i + 1
	
	
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:31) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(i < max(x)):
	i = i + 1
	print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:56) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = 0

while(x[i] < max(x)):
	i = i + 1
	print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:23) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = -1

while(x[i] < max(x)):
	i = i + 1

print(i)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:42:38) 
-- CODE:
from numpy import*

x = array(eval(input("Digite o vetor: ")))

i = -1

while(x[i] < max(x)):
	i = i + 1

print(i)	
-- EXECUTION TIME:
0.411302
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
